--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+me:
+  name: Juhyeon Oh
+  title: Backend Developer
+  url: https://github.com/ohju96
+  image_url: https://github.com/ohju96.png
